# abcdef-sim

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.github/workflows/: add-to-project.yml  adr-index.yml  ci.yml
artifacts/physics/: treacy_output_plane_spatiospectral.json  treacy_radius_convergence.json  treacy_radius_mirror_heatmap.json  treacy_spatial_metrics_vs_radius.json  treacy_spatial_metrics_vs_radius_mirror.json
docs/: architecture.md  how-to-use.md  raytracing-validation.md
docs/adr/: 0001-lite-system-preset-factory.md  0002-lite-system-assembler.md  0003-lite-laser-spec-state.md  0004-lite-dual-caching.md  0005-lite-policybag-propagation.md  0006-lite-typing-generics.md  0007-lite-eco-0001-conventions-adoption.md  0008-physics-layer-boundary.md  INDEX.md
docs/debug/: treacy-grating-phase-investigation.md
docs/refs/: README.md
examples/: compare_thick_lens_to_raytracing.py
scripts/: generate_abcd_validation_plot.py  generate_boundary_probe_sweep_artifacts.py  generate_martinez_debug_artifacts.py  generate_model_limit_diagnostic_artifacts.py  generate_treacy_benchmark_artifacts.py
src/abcdef_sim/: __init__.py  _compat.py  _phys_pipeline.py  cfg_generator.py  metrics.py  pipeline.py  presets.py  runner.py
tests/: test_import_smoke.py  test_phys_pipeline_compat.py  test_placeholder.py
tests/data_models/: test_kind_normalization.py  test_public_cfg.py  test_raystate_hashing.py  test_raystate_shape_checks.py  test_results_roundtrip.py  test_treacy_preset.py
tests/integration/: test_martinez_debug_artifacts.py  test_treacy_benchmark_artifacts.py
tests/optics/: test_factory_builds.py  test_freespace_smoke.py
tests/physics/: test_abcd_against_raytracing.py  test_abcd_lenses.py  test_abcdef_runtime_v1.py  test_action_phase.py  test_grating_optic.py  (+13 more)
(+58 files in other folders)
